# PyQt6Ads

./: .gitignore  .pre-commit-config.yaml  README.md  patch.sh  project.py  pyproject.toml
.github/workflows/: ci.yml  dist.yml  pypi.yml
examples/autohide/: main.py
examples/autohidedragndrop/: main.py
examples/deleteonclose/: main.py
examples/dockindock/: dockindock.py  dockindockmanager.py  main.py  perspectiveactions.py  perspectives.py
examples/emptydockarea/: main.py
examples/sidebar/: main.py
examples/simple/: main.py
scripts/: get-recent-releases.py  repair_wheel.py
sip/: DockComponentsFactory.sip  DockFocusController.sip  DockManager.sip  PyQt6Ads.sip
tests/: test_examples.py
